Update scripts for os-brick tests
This commit is intended to provide a base for the os-brick CI
scripts. Note that it is currently untested.

The job scripts are similar to what we have for Nova, while requiring
the JOB_TYPE argument (iscsi, fc or smbfs).

For the beginning, we'll use only one hyper-v node.

--- a/HyperV/templates/nova.conf
+++ b/HyperV/templates/nova.conf
@@ -27,8 +27,7 @@ logfile=nova-compute.log
 instance_usage_audit=true
 instance_usage_audit_period=hour
 notify_on_state_change=vm_and_task_state
-#notification_driver=nova.openstack.common.notifier.rpc_notifier
-notification_driver=ceilometer.compute.nova_notifier
+notification_driver=nova.openstack.common.notifier.rpc_notifier
 #hypervisor_inspector=hyperv
 network_api_class=nova.network.neutronv2.api.API
 security_group_api = neutron
