--- a/devstack_vm/devstack/local.conf
+++ b/devstack_vm/devstack/local.conf
@@ -27,7 +27,7 @@ enable_service q-agt
 enable_service q-dhcp
 enable_service q-l3
 enable_service q-meta
-enable_service q-fwaas
+disable_service q-fwaas
 
 disable_service horizon
 
