--- a/HyperV/templates/cinder.conf
+++ b/HyperV/templates/cinder.conf
@@ -19,6 +19,7 @@ lock_path=${lockPath}
 
 smbfs_shares_config=${smbSharesConfigPath}
 smbfs_mount_point_base=C:\OpenStack\_mnt
+smbfs_allocation_info_file_path=C:\SMBShare\allocation_data.txt
 
 os_region_name = RegionOne
 nova_catalog_admin_info = compute:nova:adminURL
