--- a/HyperV/templates/cinder.conf
+++ b/HyperV/templates/cinder.conf
@@ -4,7 +4,7 @@ volume_backend_name=SMBFS
 volume_name_template=volume-%s
 volume_driver=${volumeDriver}
 glance_api_servers=${devstackIp}:9292
-sql_connection=mysql://root:Passw0rd@${devstackIp}/cinder
+sql_connection=mysql+pymysql://root:Passw0rd@${devstackIp}/cinder
 windows_iscsi_lun_path=C:\iSCSIVHDLocation
 image_conversion_dir=C:\ImageConversionDir
 verbose=true
