--- a/devstack_vm/devstack/local.conf
+++ b/devstack_vm/devstack/local.conf
@@ -70,7 +70,7 @@ USE_BLOCK_MIGRATION_FOR_LIVE_MIGRATION=True
 
 ## pbr 1.8 or later must be used because of
 ## https://bugs.launchpad.net/pbr/+bug/1487835
-LIBS_FROM_GIT=oslo.cache,oslo.concurrency,oslo.config,oslo.context,oslo.db,oslo.i18n,oslo.log,oslo.messaging,oslo.middleware,oslo.policy,oslo.reports,oslo.rootwrap,oslo.serialization,oslo.service,oslo.utils,oslo.versionedobjects,oslo.vmware
+LIBS_FROM_GIT=oslo.cache,oslo.concurrency,oslo.config,oslo.context,oslo.db,oslo.i18n,oslo.log,oslo.messaging,oslo.middleware,oslo.policy,oslo.reports,oslo.rootwrap,oslo.serialization,oslo.service,oslo.utils,oslo.versionedobjects,oslo.vmware,os-brick
 
 DATABASE_PASSWORD=Passw0rd
 RABBIT_PASSWORD=Passw0rd
