Updated cinder conf
Signed-off-by: Remus Buzatu <r.buzatu90@gmail.com>

--- a/HyperV/templates/cinder.conf
+++ b/HyperV/templates/cinder.conf
@@ -1,11 +1,9 @@
 [DEFAULT]
 auth_strategy=keystone
 volume_backend_name=SMBFS
-volume_name_template=volume-%s
-volume_driver=${volumeDriver}
+enabled_backends=wincnd
 glance_api_servers=${devstackIp}:9292
 sql_connection=mysql+pymysql://root:Passw0rd@${devstackIp}/cinder
-windows_iscsi_lun_path=C:\iSCSIVHDLocation
 image_conversion_dir=C:\ImageConversionDir
 verbose=true
 debug=true
@@ -17,8 +15,6 @@ logdir=${logDir}
 log_file=cinder.log
 lock_path=${lockPath}
 
-smbfs_shares_config=${smbSharesConfigPath}
-smbfs_mount_point_base=C:\OpenStack\_mnt
 smbfs_allocation_info_file_path=C:\SMBShare\allocation_data.txt
 
 os_region_name = RegionOne
@@ -32,3 +28,11 @@ os_privileged_user_name=admin
 
 [coordination]
 backend_url=mysql://root:Passw0rd@${devstackIp}/cinder
+
+[wincnd]
+volume_name_template=volume-%s
+volume_driver=${volumeDriver}
+smbfs_shares_config=${smbSharesConfigPath}
+smbfs_mount_point_base=C:\OpenStack\_mnt
+smbfs_default_volume_format=vhd
+windows_iscsi_lun_path=C:\iSCSIVHDLocation
