Switch to new undercloud Other major & minor changes
Signed-off-by: Remus Buzatu <r.buzatu90@gmail.com>

--- a/devstack_vm/devstack/local.conf
+++ b/devstack_vm/devstack/local.conf
@@ -56,9 +56,9 @@ OVS_ENABLE_TUNNELING=False
 OVS_BRIDGE_MAPPINGS=physnet1:br-eth1
 OVS_PHYSICAL_BRIDGE=br-eth1
 GUEST_INTERFACE_DEFAULT=eth1
-FIXED_RANGE="172.20.1.0/24"
-SUBNETPOOL_PREFIX_V4="172.20.1.0/24"
-NETWORK_GATEWAY="172.20.1.1"
+FIXED_RANGE="172.20.0.0/16"
+SUBNETPOOL_PREFIX_V4="172.20.0.0/16"
+NETWORK_GATEWAY="172.20.0.1"
 FLOATING_RANGE="172.24.4.0/24"
 PUBLIC_NETWORK_GATEWAY="172.24.4.1"
 PUBLIC_INTERFACE=eth1
@@ -86,7 +86,7 @@ VERBOSE=True
 LOG_COLOR=False
 
 DOWNLOAD_DEFAULT_IMAGES=False
-IMAGE_URLS+="file:///home/ubuntu/devstack/files/images/cirros-0.3.3-x86_64.vhdx"
+IMAGE_URLS+="file:///home/ubuntu/devstack/files/images/cirros-latest.vhdx"
 HEAT_CFN_IMAGE_URL="file:///home/ubuntu/devstack/files/images/Fedora-x86_64-20-20140618-sda.vhdx"
 
 #PIP_UPGRADE=True
@@ -100,6 +100,15 @@ use_glance_v1=False
 [oslo_messaging_rabbit]
 heartbeat_timeout_threshold = 600
 heartbeat_rate = 3
+[placement]
+os_region_name = RegionOne
+project_domain_name = Default
+project_name = service
+user_domain_name = Default
+password = Passw0rd
+username = placement
+auth_url = http://$HOST_IP:35357/v3
+auth_type = password
 
 [[post-config|$NEUTRON_CONF]]
 [database]
